--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Soyo – Ajans Bilgi</title>
+  <title>Boss Agency</title>
   <meta name="description" content="Soyo uygulaması üzerinden ajansımıza bağlı yayıncı için bilgi sayfası." />
-  <meta property="og:title" content="Soyo – Ajans Bilgi" />
+  <meta property="og:title" content="Boss Agency" />
   <meta property="og:description" content="Soyo uygulaması üzerinden ajansımıza bağlı yayıncı için bilgi sayfası." />
   <meta property="og:type" content="website" />
   <style>
@@ -57,9 +57,10 @@
     }
 
     .logo {
-      width: 28px; height: 28px;
+      width: 32px; height: 32px;
       border-radius: 8px;
-      background: conic-gradient(from 180deg, #fff 0 25%, #000 25% 50%, #fff 50% 75%, #000 75% 100%);
+      display: block;
+      object-fit: cover;
       box-shadow: 0 0 0 1px var(--border), 0 2px 10px rgba(0,0,0,.4);
     }
 
@@ -154,9 +155,9 @@
 </head>
 <body>
   <header class="site">
-    <a class="brand" href="#top" aria-label="Soyo – Ajans Bilgi">
-      <div class="logo" aria-hidden="true"></div>
-      <span>Soyo • Ajans Bilgi</span>
+    <a class="brand" href="#top" aria-label="Boss Agency">
+      <img class="logo" src="profile.jpg" alt="Boss Agency Logo" />
+      <span>Boss Agency</span>
     </a>
   </header>
 
