--- a/index.html
+++ b/index.html
@@ -56,15 +56,7 @@
       text-decoration: none;
     }
 
-    .logo {
-      width: 40px; height: 40px;           /* Daha belirgin ve net */
-      aspect-ratio: 1 / 1;                 /* Kare oranı sabit */
-      border-radius: 9999px;               /* Tam daire */
-      object-fit: cover;                   /* Taşmadan ortadan kırp */
-      display: block;                      /* Satır içi boşlukları kaldır */
-      border: 1px solid var(--border);     /* İnce çerçeve */
-      box-shadow: 0 2px 10px rgba(0,0,0,.35);
-    }
+    /* logo kaldırıldı */
 
     .brand span {
       font-weight: 700;
@@ -154,12 +146,11 @@
       color: #dcdcdc;
     }
   </style>
-  <link rel="preload" as="image" href="./profile.jpg?v=1" />
+  <link rel="preload" as="image" href="./images/profile.jpg?v=1" />
 </head>
 <body>
   <header class="site">
     <a class="brand" href="#top" aria-label="Boss Agency">
-      <img class="logo" src="./profile.jpg?v=1" alt="Boss Agency Logo" onerror="this.onerror=null;this.src='./avatar-fallback.png';" />
       <span>Boss Agency</span>
     </a>
   </header>
