--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
     }
     .btn:hover { transform: translateY(-1px); box-shadow: 0 6px 22px rgba(0,0,0,.35); }
     .btn:active { transform: translateY(0); }
-</style>
+    /* Buton stili */
+    .btn { display:inline-block; padding:10px 16px; border-radius:9999px; background:#fff; color:#000; text-decoration:none; font-weight:700; border:1px solid var(--border); box-shadow:0 2px 10px rgba(0,0,0,.25); }
+    .btn:active { transform: translateY(1px); }
+    .contact-top { display:flex; justify-content:center; }
+  </style>
   <link rel="preload" as="image" href="./images/profile.jpg?v=1" />
 </head>
 <body>
@@ -171,6 +175,9 @@
   </header>
 
   <main class="wrap" id="top">
+    <section class="contact-top" style="margin: 8px 0 16px;">
+      <a class="btn" href="https://wa.me/447445116292" target="_blank" rel="noopener" aria-label="WhatsApp ile iletişime geç ( +44 7445 116292 )">WhatsApp ile ulaşın</a>
+    </section>
     <section class="hero">
       <p class="kicker">Bilgilendirme</p>
       <h1>Soyo uygulaması üzerinden Ajansımıza bağlı olacak yayıncı aranıyor!</h1>
@@ -210,14 +217,6 @@
         </ul>
       </section>
     </div>
-
-    <section class="card" id="iletisim" style="grid-column: 1 / -1; margin-top: 10px;">
-        <h2>İletişim</h2>
-        <div class="cta">
-          <a class="btn" href="https://wa.me/447445116292" target="_blank" rel="noopener" aria-label="WhatsApp ile iletişime geç ( +44 7445 116292 )">WhatsApp ile ulaşın</a>
-          <div style="margin-top:8px; color: var(--muted); font-size:.92rem;">Numara: +44 7445 116292</div>
-        </div>
-      </section>
   </main>
   <!-- Basit bir yedek görsel oluşturmak isteyenler icin -->
   <!-- avatar-fallback.png dosyasını eklemediyseniz yukarıdaki onerror satırı etkisiz kalır. İsterseniz silin. -->
