--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <a class="btn" href="https://wa.me/447445116292" target="_blank" rel="noopener" aria-label="WhatsApp ile iletişime geç ( +44 7445 116292 )">WhatsApp ile ulaşın</a>
     </section>
     <p class="agency-code" aria-label="Ajans kodu" style="text-align:center; margin:-8px 0 18px; color: var(--muted);">
-      <strong style="color:#fff">Ajans Kodu: 3385</strong> — İsterseniz davet edebilirsiniz; davet ettiğiniz kişiler uygulama içinde bu kodu yazarak ajansımıza ulaşabilir.
+      <strong style="color:#fff">Ajans Kodu: 3385</strong> — Hesabı kurdktan sonra profil kısmından ajans sekmesinde 3385 kodunu aratarak Boss Agency adındaki ajansa katılma isteği gönderebilirsiniz.
     </p>
     <section class="hero">
       <p class="kicker">Bilgilendirme</p>
