--- a/index.html
+++ b/index.html
@@ -147,23 +147,15 @@
     }
       /* CTA & Button */
     .cta { text-align: center; margin-top: 18px; }
-    .btn {
-      display: inline-block;
-      padding: 10px 14px;
-      border: 1px solid var(--border);
-      border-radius: 9999px;
-      text-decoration: none;
-      color: var(--bg);
-      background: var(--text);
-      font-weight: 600;
-      transition: transform .15s ease, box-shadow .2s ease, background .2s ease, color .2s ease;
-    }
+    .btn { display:inline-block; padding:10px 16px; border-radius:9999px; background:#25D366; color:#fff; text-decoration:none; font-weight:700; border:1px solid #1a8f4c; box-shadow:0 2px 10px rgba(0,0,0,.25); }
+    .btn:hover { filter: brightness(0.95); }
+    .btn:active { transform: translateY(1px); }
     .btn:hover { transform: translateY(-1px); box-shadow: 0 6px 22px rgba(0,0,0,.35); }
     .btn:active { transform: translateY(0); }
     /* Buton stili */
     .btn { display:inline-block; padding:10px 16px; border-radius:9999px; background:#fff; color:#000; text-decoration:none; font-weight:700; border:1px solid var(--border); box-shadow:0 2px 10px rgba(0,0,0,.25); }
     .btn:active { transform: translateY(1px); }
-    .contact-top { display:flex; justify-content:center; }
+    .contact-top { display:flex; flex-direction:column; align-items:center; justify-content:center; }
       .agency-code { font-size:.95rem; }
   </style>
   <link rel="preload" as="image" href="./images/profile.jpg?v=1" />
@@ -177,10 +169,10 @@
 
   <main class="wrap" id="top">
     <section class="contact-top" style="margin: 8px 0 16px;">
+      <div class="cta-text" style="margin-bottom:8px; font-weight:600;">WhatsApptan bize ulaşmak için hemen tıkla!</div>
       <a class="btn" href="https://wa.me/447445116292" target="_blank" rel="noopener" aria-label="WhatsApp ile iletişime geç ( +44 7445 116292 )">WhatsApp ile ulaşın</a>
     </section>
     <p class="agency-code" aria-label="Ajans kodu" style="text-align:center; margin:-8px 0 18px; color: var(--muted);">
-      <strong style="color:#fff">Ajans Kodu: 3385</strong> — Hesabı kurdktan sonra profil kısmından ajans sekmesinde 3385 kodunu aratarak Boss Agency adındaki ajansa katılma isteği gönderebilirsiniz.
     </p>
     <section class="hero">
       <p class="kicker">Bilgilendirme</p>
@@ -188,7 +180,7 @@
       <ul>
         <li>Kendi hesabını aç, uygulamada sohbet et, telefon ve görüntülü görüşme yap, görüşme başına gelir kazan.</li>
         <li>Haftalık/aylık performans bonusu</li>
-        <li>Güvenli ödeme, sözleşmeli çalışma</li>
+        <li>Güvenli ödeme</li>
       </ul>
     </section>
 
@@ -216,7 +208,6 @@
           <li>Görüntülü arama: Dakika = 630 elmas</li>
           <li>Günlük “Hi” hakkı: 100 (uygulamadaki Hi butonuyla otomatik mesaj)</li>
           <li>4400 elmas 1 dolara eşittir.</li>
-          <li>Ajans tarafından belirli bir elmasa ulaşınca tl bazında günlük ve haftalık olarak bonus verilecektir.</li>
           <li>Günlük 1 çekim hakkıyla hızlıca biriktirdiğiniz elmas kadar kazanç alabilirsiniz.</li>
         </ul>
       </section>
